--- a/detectron2-rpd-pkg/src/detectron2-rpd/options-template.ini
+++ b/detectron2-rpd-pkg/src/detectron2-rpd/options-template.ini
@@ -1,12 +1,12 @@
 ; Config file for Detectron2-RPD
 ; [VOL/DICOM EXTRACTION]
 run_extract = True
-input_dir = None
-extracted_dir = None
+input_dir = /workspace/data/data_folder
+extracted_dir = /workspace/data/extracted
 input_format = vol
 ; [INFERENCE]
-dataset_name = TestSet
-output_dir = None
+dataset_name = RPD_Test
+output_dir = /workspace/data/out
 run_inference = True
 create_tables = True
 ; [VISUAL OUTPUT]
